basic-dotnet-example/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellotilt
spec:
  selector:
    matchLabels:
      app: hellotilt
  replicas: 1
  template:
    metadata:
      labels:
        app: hellotilt
    spec:
      containers:
      - name: hellotilt
        image: hellotilt
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /weatherforecast
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 15
        livenessProbe:
          httpGet:
            path: /weatherforecast
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 3
