basic-dotnet-example/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellotilt
spec:
  selector:
    app: hellotilt
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
